fix styling to fit on iphone5

--- a/app/styles/AddContact.scss
+++ b/app/styles/AddContact.scss
@@ -9,7 +9,7 @@ firstNameInput, lastNameInput {
   background-color: #EAE8E8;
   border-radius: 10px;
   margin-bottom: 10px;
-  width: 320px;
+  width: 300px;
 }
 
 inputFields {
@@ -21,7 +21,7 @@ inputFields {
 datePicker {
   background-color: #EAE8E8;
   border-radius: 10px;
-  width: 320px;
+  width: 300px;
 }
 
 avatar {
