--- a/app/styles/ContactList.scss
+++ b/app/styles/ContactList.scss
@@ -10,7 +10,7 @@ searchBar {
   background-color: #EAE8E8;
   border-radius: 10px;
   margin: 80px 0 10px 0;
-  width: 320px;
+  width: 300px;
 }
 
 searchInput {
