--- a/app/styles/IndividualContact.scss
+++ b/app/styles/IndividualContact.scss
@@ -5,21 +5,12 @@ individualContact {
 }
 
 notesField {
-  background-color: #EAE8E8;
-  border-radius: 5px;
-  margin-top: 20px;
-  width: 200px;
-}
-
-notesInput {
-  color: #02556D;
-  font-size: 18px;
-  padding: 2px 10px 10px 10px;
+  width: 250px;
 }
 
 individualAvatar {
   border-radius: 62.5px;
   height: 125px;
-  margin: 120px 0 20px 0;
+  margin-top: 75px;
   width: 125px;
 }
